syntax = "proto3";

package nodeserver;

option go_package = "./;proto";

service Node {
  rpc GetBlockInfos(GetBlockInfosRequest) returns (GetBlockInfosResponse);
  rpc GetBlockInfo(GetBlockInfoRequest) returns (GetBlockInfoResponse);
  rpc GetBlock(GetBlockRequest) returns (GetBlockResponse);
  rpc WriteBlock(WriteBlockRequest) returns (WriteBlockResponse);
  rpc DeleteBlock(DeleteBlockRequest) returns (DeleteBlockResponse);
  rpc CopyBlock(CopyBlockRequest) returns (CopyBlockResponse);
}


message BlockInfo {
  uint64 blockId = 1;
  uint32 crc = 2;
  uint64 sequence = 3;
  uint32 length = 4;
  string path = 5;
}

// Define a User message
message GetBlockInfosRequest {

}

message GetBlockInfosResponse {
  repeated BlockInfo blockInfos = 1;
}


message GetBlockInfoRequest {
  uint64 id = 1;
}

message GetBlockInfoResponse {
  BlockInfo blockInfo = 1;
}

message GetBlockRequest {
  uint64 id = 1;
}

message GetBlockResponse {
  BlockInfo blockInfo = 1;
  bytes data = 2;
}

message WriteBlockRequest {
  BlockInfo blockInfo = 1;
  bytes data = 2;
}

message WriteBlockResponse {
  BlockInfo blockInfo = 1;
}

message DeleteBlockRequest {
  uint64 id = 1;
}

message DeleteBlockResponse {
  uint64 id = 1;
}

message CopyBlockRequest {
  uint64 id = 1;
  string destinationUrl = 2;
}

message CopyBlockResponse {
}